--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="social-links">
         <a href="https://www.linkedin.com/in/ishan--agrawal" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/pyvisualizer" target="_blank" class="github"><i class="bi bi-github"></i></a>
-        <a href="mailto:ishanagrawal1201@gmail.com" target="_blank" class="mail"><i class="bx bx-envelope"></i></a>
+        <a href="mailto:ishanagrawal1201@gmail.com" target="_blank" class="mail"><i class="bi bi-envelope"></i></a>
 
       </div>
 
