--- a/index.html
+++ b/index.html
@@ -313,6 +313,17 @@
             </p>
           </div>
           <div class="resume-item">
+            <h4>Freelancer</h4>
+            <h5>2018 - Present</h5>
+            <p><em>India</em></p>
+            <p>
+            <ul>
+              <li>Working as full time Freelancer in fields like python, software development, web automation, AI/ML, Web scrapping, Image processing etc.</li>
+              <li>Worked with over 60+ clients since 2018</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
             <h4>Technical Lead</h4>
             <h5>April, 2021 - Present</h5>
             <p><em>Microsoft Student Club, Pilani, India</em></p>
