--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Education & Experience</a></li>
-          <li><a href="https://github.com/pyvisualizer/ishn/raw/main/Ishan's%20Resume%20(3).pdf" target="_blank" class="nav-link" href="#services">Resume</a></li>
+          <li><a href="https://github.com/pyvisualizer/ishn/raw/main/Ishan's%20Resume%20.pdf" target="_blank" class="nav-link" href="#services">Resume</a></li>
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
